# spotify-playlist-sorter

./: .env.dist  .gitignore  Cargo.toml  README.md
src/: client.rs  main.rs
src/client/: artist.rs  auth.rs  mod.rs  playlists.rs  saved_tracks.rs
src/model/: artist.rs  mod.rs  playlist.rs  saved_tracks.rs  token.rs
src/utils/: sort.rs
