[package]
name = "spotify-sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
dotenv = "0.15.0"
url = "2.5.4"
open = "5.3.2"
tiny_http = "0.12.0"
colored = "3.0.0"
lazy_static = "1.5.0"
indicatif = "0.17.11"
serde_json = "1.0.140"
strsim = "0.11.1"